--- a/package.json
+++ b/package.json
@@ -3,17 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --https",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "firebase": "^5.4.0",
+    "lodash": "^4.17.10",
+    "material-design-lite": "^1.3.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuefire": "^1.4.5",
+    "vuex": "^3.0.1",
+    "xml-parser": "^1.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
