--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "short_name": "cropchat",
   "icons": [
     {
-      "src": "/img/icons/android-chrome-192x192.png",
-      "sizes": "192x192",
+      "src": "./img/icons/icon-192x192.png",
+      "sizes": "16x16 24x24 32x32 64x64 128x128 192x192",
       "type": "image/png"
     },
     {
-      "src": "/img/icons/android-chrome-512x512.png",
-      "sizes": "512x512",
+      "src": "./img/icons/icon-512x512.png",
+      "sizes": "256x256 512x512",
       "type": "image/png"
     }
   ],
-  "start_url": "/index.html",
-  "display": "standalone",
+  "start_url": "/",
+  "display": "fullscreen",
   "background_color": "#000000",
   "theme_color": "#4DBA87"
 }
