sync data in background

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "prod": "npm run build && serve dist/",
-    "serve": "vue-cli-service serve --open --https",
+    "prod": "npm run build && serve dist/ && ngrok http 4040",
+    "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "deploy": "BUILD_FOR=github-pages vue-cli-service build --mode production",
     "lint": "vue-cli-service lint",
